hierarchical clustering rework

--- a/code/clustering_k-means.ipynb
+++ b/code/clustering_k-means.ipynb
@@ -417,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### il ciclo for su k permette di identificare il best number of clusters da utilizzare nell'algoritmo; lo si trova vedendo SSE e silhouette"
+    "il ciclo for su k permette di identificare il best number of clusters da utilizzare nell'algoritmo; lo si trova vedendo SSE e silhouette"
    ]
   },
   {
