--- a/code/classification_NB.ipynb
+++ b/code/classification_NB.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## pp_class\n",
+    "## LAVORO SULLA COPIA (pp_class)\n",
     "### codifica variabile target"
    ]
   },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
     "pp_class['totalVideos_bin'] = (pp_class['totalVideos'] > 0).astype(int)\n",
     "pp_class['awardNominations_bin'] = (pp_class['awardNominationsExcludeWins'] > 0).astype(int)\n",
     "\n",
-    "# Riempi i valori mancanti di 'endYear' con quelli di 'startYear'\n",
+    "# Riempi i valori mancanti di 'endYear' con quelli di 'startYear' -> DA VEDERE PERCHE' LASCIA COMUNQUE NAN\n",
     "pp_class['endYear'].fillna(pp_class['startYear'], inplace=True)\n"
    ]
   },
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
     "\n",
     "\n",
     "\n",
-    "#elimino colonna country of origin\n",
+    "#elimino colonna country of origin - FORSE DA TENERE\n",
     "#variabili da eliminare\n",
     "column2drop = ['countryOfOrigin']\n",
     "pp_class.drop(column2drop, axis=1, inplace=True)"
