ordine modifiche train

--- a/code/classification_NB.ipynb
+++ b/code/classification_NB.ipynb
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### feature engeneriing"
+    "#### feature engeneriing per classificazione + ATTENZIONE A END YEAR-> gaia non l'ha usato ad es -> non è ancora modificato"
    ]
   },
   {
@@ -390,7 +390,7 @@
     "pp_class['totalVideos_bin'] = (pp_class['totalVideos'] > 0).astype(int)\n",
     "pp_class['awardNominations_bin'] = (pp_class['awardNominationsExcludeWins'] > 0).astype(int)\n",
     "\n",
-    "# Riempi i valori mancanti di 'endYear' con quelli di 'startYear' -> DA VEDERE PERCHE' LASCIA COMUNQUE NAN\n",
+    "# Riempi i valori mancanti di 'endYear' con quelli di 'startYear' -> DA VEDERE PERCHE' FATTO COME IN TEORIA HA FATTO BRUNO LASCIA COMUNQUE NAN\n",
     "pp_class['endYear'].fillna(pp_class['startYear'], inplace=True)\n"
    ]
   },
@@ -1787,12 +1787,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalization"
+    "### Normalization MANCA LOGARITM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1800,7 +1800,7 @@
     "# standardsc = StandardScaler()\n",
     "\n",
     "# # Fitta e trasforma il training set in un solo passaggio\n",
-    "# X_train_standardsc = standardsc.fit_transform(X_train2)\n",
+    "# X_train2_standardsc = standardsc.fit_transform(X_train2)\n",
     "# X_val_standardsc = standardsc.fit_transform(X_val)\n",
     "\n",
     "# # Trasforma il test set (senza rifittare!)\n",
@@ -1809,21 +1809,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# minmax = MinMaxScaler()\n",
     "\n",
     "# # Fitta e trasforma il training set in un solo passaggio\n",
-    "# X_train_minmax = minmax.fit_transform(X_train2)\n",
+    "# X_train2_minmax = minmax.fit_transform(X_train2)\n",
     "# X_val_minmax = minmax.fit_transform(X_val)\n",
     "\n",
     "\n",
     "# # Trasforma il test set (senza rifittare!)\n",
     "# #X_test_minmax = minmax.transform(X_test)\n",
-    "\n",
-    "# X_train_tr = X_train_minmax \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_train2_tr = X_train_minmax \n",
     "# X_val_tr = X_val_minmax "
    ]
   },
