--- a/code/modifiche_testset.ipynb
+++ b/code/modifiche_testset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "import numpy as np\n",
     "import ast\n",
     "\n",
-    "test_df = pd.read_csv(\"test.csv\")"
+    "test_df = pd.read_csv(\"test.csv\")\n",
+    "#test_df = pd.read_csv(\"train.csv\")"
    ]
   },
   {
@@ -248,22 +249,6 @@
    "source": [
     "#creiamo nuova colonna runtimeMinutes dove sostituiamo i nan con mediana \n",
     "test_df[\"fill_runtimeMinutes\"] = test_df.groupby([\"titleType\"])[\"runtimeMinutes\"].transform(lambda x: x.fillna(x.median()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Drop della colonna \"genres\" dato che abbiamo già fatto il one-hot encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df.drop([\"genres\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -587,6 +572,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "crea attributi is_from_X ->onehotencoding perchè ci sono multivalori"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -598,14 +590,19 @@
     "\n",
     "# Create a one-hot encoded column for each continent\n",
     "for genre in all_continents:\n",
-    "    test_df[f\"is_from_{genre}\"] = test_df['countryOfOrigin'].apply(lambda x: 1 if genre in x else 0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#elimino colonna country of origin\n",
-    "#variabili da eliminare\n",
-    "column2drop = ['countryOfOrigin']\n",
-    "test_df.drop(column2drop, axis=1, inplace=True)"
+    "    test_df[f\"is_from_{genre}\"] = test_df['countryOfOrigin'].apply(lambda x: 1 if genre in x else 0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MANCANO -> nel pp_train usato in alcuni clustering non ci sono:\n",
+    "- Totalmedia -> images + video (usato nel hierachical)\n",
+    "- total nomination -> award win + award exclude (usato nel hierachical)\n",
+    "- End year -> rimpiazza con start year, ma non per le serie? restano nan\n",
+    "- fill runtime -> sarebbe da cambiare con 30-70 -> nel clustering l'abbiamo usato con mediana -> ne vale la pena?\n",
+    "- can have episode convertire in 0/1? per knn e nb si, meglio averle coerenti e non qualcuna 0/1 e qualcuna True/False --> pp_class['canHaveEpisodes'] = pp_class['canHaveEpisodes'].astype(int)"
    ]
   },
   {
@@ -616,12 +613,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "importante che mentre fa uno l'altro sia commentato"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.to_csv('pp_test.csv', index=False, header=True)"
+    " #TEST\n",
+    "test_df.to_csv('pp_test.csv', index=False, header=True)\n",
+    "#TRAIN PP_TRAIN_COMPLETO ->\n",
+    "#test_df.to_csv(\"pp_train_completo.csv\", index=False, header=True)"
    ]
   }
  ],
