--- a/code/knn_binaryclassification.ipynb
+++ b/code/knn_binaryclassification.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 1,
    "id": "c41a62b0",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 2,
    "id": "f239fd00",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 3,
    "id": "3d2657c0",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 4,
    "id": "881ca0bb",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 5,
    "id": "c2d575ec",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 6,
    "id": "13d9068f",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 7,
    "id": "ebcf6073",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 8,
    "id": "db91ed88",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 9,
    "id": "75fc1419",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 10,
    "id": "7e4b4e42",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 11,
    "id": "72ffae3f",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 12,
    "id": "6dba334d",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 13,
    "id": "8a2de778",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 14,
    "id": "d5daa80f",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 15,
    "id": "6aa33fb3",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 16,
    "id": "3dbc6de4",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 17,
    "id": "058640b1",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 18,
    "id": "b8ea2a2e",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 19,
    "id": "1d9e68d9",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 20,
    "id": "d24fd36f",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 21,
    "id": "6b73a1d2",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 22,
    "id": "4938f2f1",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 23,
    "id": "542c7299",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 24,
    "id": "b364c9bc",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 25,
    "id": "5b45e785",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 26,
    "id": "fa9a1414",
    "metadata": {},
    "outputs": [
@@ -820,6 +820,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a66ecbb",
+   "metadata": {},
+   "source": [
+    "### Compare the results with a dummy classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "942f71d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5281124497991968\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.53      1.00      0.69      2893\n",
+      "           1       0.00      0.00      0.00      2585\n",
+      "\n",
+      "    accuracy                           0.53      5478\n",
+      "   macro avg       0.26      0.50      0.35      5478\n",
+      "weighted avg       0.28      0.53      0.37      5478\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Gagia\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Gagia\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Gagia\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# Create dummy classifier (most frequent class strategy)\n",
+    "dummy = DummyClassifier(strategy=\"most_frequent\")\n",
+    "dummy.fit(X_train_standardsc, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred = dummy.predict(X_test_standardsc)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b16b09b2",
    "metadata": {},
    "source": [
@@ -830,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 28,
    "id": "2c0c92a8",
    "metadata": {},
    "outputs": [],
@@ -842,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 29,
    "id": "a1c658aa",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1301,7 @@
        "[16431 rows x 50 columns]"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 30,
    "id": "f9fd1ef0",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1322,7 @@
        "1838"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 31,
    "id": "5a3cbbc0",
    "metadata": {},
    "outputs": [],
@@ -1294,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 32,
    "id": "5bb93eaf",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1363,7 @@
        "11289"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 33,
    "id": "c045decc",
    "metadata": {},
    "outputs": [],
@@ -1343,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 34,
    "id": "09b520fe",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 35,
    "id": "8cb5d9d0",
    "metadata": {},
    "outputs": [],
@@ -1389,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 36,
    "id": "9c3dab73",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 37,
    "id": "59b8665e",
    "metadata": {},
    "outputs": [],
@@ -1420,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 38,
    "id": "0b43f002",
    "metadata": {},
    "outputs": [],
@@ -1445,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 39,
    "id": "92ae2fb6",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 40,
    "id": "993e7dba",
    "metadata": {},
    "outputs": [],
@@ -1531,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 41,
    "id": "541bb5bb",
    "metadata": {},
    "outputs": [],
@@ -1544,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 42,
    "id": "e5804a1e",
    "metadata": {},
    "outputs": [
@@ -1575,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 43,
    "id": "87b03dd5",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 44,
    "id": "4c62c089",
    "metadata": {},
    "outputs": [
@@ -1689,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 45,
    "id": "59c5e961",
    "metadata": {},
    "outputs": [
@@ -1726,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 46,
    "id": "b38cb142",
    "metadata": {},
    "outputs": [],
@@ -1739,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 47,
    "id": "8bbaa10a",
    "metadata": {},
    "outputs": [
@@ -1829,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 48,
    "id": "283804b9",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 49,
    "id": "3686f947",
    "metadata": {},
    "outputs": [
@@ -1883,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 50,
    "id": "6d4fb220",
    "metadata": {},
    "outputs": [
@@ -1908,6 +1967,65 @@
     "plt.ylabel('Predicted')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "211c4d93",
+   "metadata": {},
+   "source": [
+    "### Compare the results with a dummy classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "24fb94e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.685469149324571\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00      1723\n",
+      "           1       0.69      1.00      0.81      3755\n",
+      "\n",
+      "    accuracy                           0.69      5478\n",
+      "   macro avg       0.34      0.50      0.41      5478\n",
+      "weighted avg       0.47      0.69      0.56      5478\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Gagia\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Gagia\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Gagia\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# Create dummy classifier (most frequent class strategy)\n",
+    "dummy = DummyClassifier(strategy=\"most_frequent\")\n",
+    "dummy.fit(X_train_standardsc, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred = dummy.predict(X_test_standardsc)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n"
    ]
   }
  ],
