change name in "has_lowEngagement"

--- a/code/knn_binaryclassification.ipynb
+++ b/code/knn_binaryclassification.ipynb
@@ -1337,23 +1337,23 @@
    "id": "02e732d0",
    "metadata": {},
    "source": [
-    "## \"lowEngagement\""
+    "## \"has_lowEngagement\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "5a3cbbc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "copy_train['lowEngagement'] = (copy_train['numVotes'] < 100).astype(int)\n",
-    "copy_test['lowEngagement'] = (copy_test['numVotes'] < 100).astype(int)"
+    "copy_train['has_lowEngagement'] = (copy_train['numVotes'] < 100).astype(int)\n",
+    "copy_test['has_lowEngagement'] = (copy_test['numVotes'] < 100).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5bb93eaf",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
     }
    ],
    "source": [
-    "x = sum(copy_train[\"lowEngagement\"] == 1)\n",
+    "x = sum(copy_train[\"has_lowEngagement\"] == 1)\n",
     "x"
    ]
   },
@@ -1383,13 +1383,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c045decc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train = np.array(copy_train['lowEngagement'])  # Il target originale\n",
-    "y_test = np.array(copy_test[\"lowEngagement\"])"
+    "y_train = np.array(copy_train['has_lowEngagement'])  # Il target originale\n",
+    "y_test = np.array(copy_test[\"has_lowEngagement\"])"
    ]
   },
   {
