--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -166,9 +166,10 @@ By doing so, any cell in the \texttt{endYear}, \texttt{runtimeMinutes} and \text
 \subsection{Missing Values}
 Once having solved the above-mentioned inconsistency, the resulting total amount of the missing values are the following, also represented in percentages for a better understanding:
 \begin{itemize}
-    \item \texttt{endYear}: it is the feature with the highest number of NaN values (15617; about 95\%). To handle them it has been decided to \textbf{COSA FARE? forse furbo sostituire i nan con lo startyear di quel record};
+    \item \texttt{endYear}: it is the feature with the highest number of NaN values (15617; about 95\%). For this reason and due to the lack of reliable imputation methods, the entire feature has been removed;
     
-    \item \texttt{runtimeMinutes}: it has 4852 missing values (29.5\%) that have been handled by grouping the records by \texttt{titleType} and substituting the NaN value with the median of each group \textbf{ALTRIMENTI prendere valore random tra il 30\% - 70\% per titletype; anche se questo causa problemi nel momento in cui andiamo a classificare un nuovo record che non ha titletype};
+    \item \texttt{runtimeMinutes}: it has 4852 missing values (29.5\%) that have been handled in two different ways according to the data mining task in hand. More details are provided in the specific paragraphs;
+    % by grouping the records by \texttt{titleType} and substituting the NaN value with the median of each group \textbf{ALTRIMENTI prendere valore random tra il 30\% - 70\% per titletype; anche se questo causa problemi nel momento in cui andiamo a classificare un nuovo record che non ha titletype};
     
     \item \texttt{awardWins}: this feature has 2618 NaN values (about 16\%). Since the mode associated with this variable is 0, it has been decided to substitute the missing values with 0;
 
@@ -190,10 +191,13 @@ As the first step in the variable transformation process, the \texttt{countryOfO
 This transformation was necessary because some records contain multiple genres or countries as values for these variables.
 After that, multi-label one-hot encoding was applied to the \texttt{genres} column; each unique genre was represented as a binary feature, allowing records that belong to multiple genres simultaneously to maintain this information.
 A similar approach was taken for the \texttt{countryOfOrigin} attribute; however, instead of creating a separate feature for each unique country (as there were many of them), countries were grouped by continent.
-Six binary attributes were created: \texttt{is\_from\_Africa}, \texttt{is\_from\_Asia}, \texttt{is\_from\_Europe}, \texttt{is\_from\_North America}, \texttt{is\_from\_Oceania}, and \texttt{is\_from\_South America}.
-This transformation preserves information about titles produced in more than one continent, as they will have a value of 1 for each corresponding attribute.
+The follwing variables have been created: \texttt{countryOfOrigin\_NA}, \texttt{countryOfOrigin\_SA}, \texttt{countryOfOrigin\_AF}, \texttt{countryOfOrigin\_AS}, \texttt{countryOfOrigin\_EU}, and \texttt{countryOfOrigin\_OC}. 
+\textbf{These attributes have, for each record, the corresponding number of countries belonging to that continent}.
+In addition to those, \texttt{countryOfOrigin\_freq\_enc}, and \texttt{countryOfOrigin\_UNK} have also been created; their purpose is to identify \textbf{SPECIFICARE RUOLO FREQUENCY ENCODING} for the first one, and to indicate which records have a country \textbf{SPECIFICARE QUESTIONE DEGLI UNKNOWN CONTINENTS} for the other. 
+% Six binary attributes were created: \texttt{is\_from\_Africa}, \texttt{is\_from\_Asia}, \texttt{is\_from\_Europe}, \texttt{is\_from\_North America}, \texttt{is\_from\_Oceania}, and \texttt{is\_from\_South America}.
+% This transformation preserves information about titles produced in more than one continent, as they will have a value of 1 for each corresponding attribute.
 Furthermore, it has been decided to extract the ceiling value for each entry in the \texttt{rating} column, in order to use it as an integer for further analysis.
-\textbf{QUESTIONE TOTALMEDIA, TOTALNOMINATION - sono state fatte?}\\
+Looking at the already existing features it has also been decided to \textbf{scrivere QUESTIONE TOTALMEDIA, TOTALNOMINATION}\\
 
 For the numeric attributes, it was observed that required a stronger transformation due to their highly positively skewed distributions. 
 Specifically, when required by the data mining method, a log-transformation was applied to all the numeric attributes, since their skewness was highly greater than 1. 
