--- a/code/feat_merge.ipynb
+++ b/code/feat_merge.ipynb
@@ -279,13 +279,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b5967770",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('pp_train.csv', index=False)\n",
-    "test.to_csv('pp_test.csv', index=False)"
+    "# train.to_csv('pp_train.csv', index=False)\n",
+    "# test.to_csv('pp_test.csv', index=False)"
    ]
   },
   {
